---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, backup, restore, bluexp, bluexp backup and recovery, protection' 
summary: Découvrez les nouveautés de la sauvegarde et de la restauration BlueXP. 
---
= Nouveautés de la sauvegarde et de la restauration BlueXP
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Découvrez les nouveautés de la sauvegarde et de la restauration BlueXP.



== 09 juin 2025

Cette version de sauvegarde et de restauration BlueXP  comprend les mises à jour suivantes.



=== Mises à jour du support du catalogue indexé

En février 2025, nous avons introduit la fonctionnalité d'indexation mise à jour (Catalogue indexé v2) que vous utilisez lors de la méthode de recherche et de restauration des données. La version précédente améliorait considérablement les performances d'indexation des données dans les environnements locaux. Avec cette version, le catalogue d'indexation est désormais disponible dans les environnements Amazon Web Services, Microsoft Azure et Google Cloud Platform (GCP).

Si vous êtes un nouveau client, le catalogue indexé v2 est activé par défaut pour tous les nouveaux environnements. Si vous êtes déjà client, vous pouvez réindexer votre environnement pour bénéficier du catalogue indexé v2.

.Comment activer l'indexation ?
Avant de pouvoir utiliser la méthode Search & Restore de restauration des données, vous devez activer l'« indexation » sur chaque environnement de travail source à partir duquel vous prévoyez de restaurer des volumes ou des fichiers. Sélectionnez l'option *Activer l'indexation* lorsque vous effectuez une recherche et une restauration.

Le catalogue indexé peut ensuite suivre chaque volume et fichier de sauvegarde, rendant vos recherches rapides et efficaces.
