@@ -1544,7 +1544,6 @@
   <block id="64964208f145e571ed736f861e9c039d" category="admonition">La sauvegarde et la restauration BlueXP doivent déjà être activées pour au moins un environnement de travail, et les fichiers de sauvegarde initiaux doivent exister.</block>
   <block id="5b8dbbc2163786a4aed9331d66f16125" category="list-text">La sauvegarde et la restauration BlueXP affiche les dossiers et les fichiers qui existent dans le fichier de sauvegarde sélectionné.</block>
   <block id="3909c405c5c3e8aaab7d2079c933cb0f" category="paragraph">Comme vous pouvez le voir, il vous suffit de connaître un nom partiel et de rechercher des sauvegardes et des restaurations BlueXP dans tous les fichiers de sauvegarde correspondant à votre recherche.</block>
-  <block id="cde27c2ee36cb857ffdbfe24fb0f0fef" category="paragraph">Lorsque vous activez cette fonctionnalité, BlueXP Backup and Recovery active SnapDiff v3 sur le SVM pour vos volumes et il effectue les actions suivantes :</block>
   <block id="091c3b75fcc63b578a3277a3c06221b8" category="list-text">Vous avez souscrit au<block ref="b82eb11d49725bb5c7ee9cfd96e7991d" category="inline-link-rx"></block>, ou vous avez acheté <block ref="a7c7886675f758752089ea0caddfb19c" category="inline-link-macro-rx"></block> Licence BYOL pour la sauvegarde et la restauration BlueXP de NetApp.</block>
   <block id="afa3805a28538274aaae2473f6106629" category="inline-image-macro">Capture d'écran montrant le bouton Activer la sauvegarde et la restauration BlueXP, disponible après la sélection d'un environnement de travail.</block>
   <block id="a2271679a96260c288cd66073902da0e" category="paragraph"><block ref="a2271679a96260c288cd66073902da0e" category="inline-image-macro-rx" type="image"></block></block>
@@ -1569,7 +1568,6 @@
   <block id="0718118055dc2edc791fa29a90a786fe" category="section-title">Classes de stockage d'archivage Google prises en charge pour la sauvegarde et la restauration BlueXP</block>
   <block id="c2e5d30cd0abf0804ca8396b9b1f8c56" category="paragraph">Notez que lorsque vous configurez la sauvegarde et la restauration BlueXP avec ce type de règle de cycle de vie, vous ne devez pas configurer de règles de cycle de vie lors de la configuration du compartiment dans votre compte Google.</block>
   <block id="993e951005a20173ae0c8c379739a8f1" category="summary">Découvrez les nouveautés de la sauvegarde et de la restauration BlueXP.</block>
-  <block id="fd3d1ba9a2328492349b6ebea92fe728" category="doc">Nouveautés de la sauvegarde et de la restauration BlueXP</block>
   <block id="ef08fc33d8b9b410529dc05986b2e248" category="paragraph">Les nouvelles fonctionnalités des API vous permettent de sauvegarder vos copies Snapshot de volume vers ONTAP S3 à l'aide de la sauvegarde et de la restauration BlueXP. Cette fonctionnalité est disponible uniquement pour les systèmes ONTAP sur site à l'heure actuelle. Pour obtenir des instructions détaillées, consultez le blog<block ref="8bfab3c14784f20047e4459b814ebfe4" category="inline-link-rx"></block>.</block>
   <block id="bcd4bdef20ff7dec0587f35facdeb7be" category="paragraph">Lors de la création de sauvegardes à partir de systèmes Cloud Volumes ONTAP vers du stockage Azure, par défaut, la sauvegarde et la restauration BlueXP provisionne le conteneur Blob avec une redondance locale (LRS) pour l'optimisation des coûts. Vous pouvez définir ce paramètre sur redondance de zone (ZRS) si vous souhaitez que vos données soient répliquées entre différentes zones. Consultez les instructions Microsoft pour<block ref="c549763665cfbb93dbccfdbf667aa0f2" category="inline-link-rx"></block>.</block>
   <block id="4788963de19a5204a352f3308b0395d8" category="inline-link">Examinez toutes les alertes que les solutions de sauvegarde et de restauration BlueXP peuvent envoyer</block>
@@ -3949,4 +3947,8 @@ ifdef::aws[]</block>
   <block id="4d1f1dc63841491797cde0fde7dec31d" category="list-text">Sélectionnez l'emplacement de destination où vous souhaitez que le volume, le dossier ou le(s) fichier(s) soient restaurés et sélectionnez *Restaurer*.</block>
   <block id="dc98364e6680ec201dcd1e55df5cf2e1" category="paragraph">Le volume, le dossier ou le(s) fichier(s) sont restaurés et vous revenez au tableau de bord de restauration pour vérifier la progression de l'opération de restauration. Vous pouvez également sélectionner l’onglet *Surveillance des tâches* pour voir la progression de la restauration.</block>
   <block id="791d05d0e9072626d0316ef0a7cf21bc" category="section-title">09 juin 2025</block>
+  <block id="0a849c115a4741e75692ddd548e07b4d" category="paragraph">Vous pouvez activer ou désactiver cette option lorsque vous activez la protection ou démarrez le processus de restauration.</block>
+  <block id="9bbf67835dcc255a2362d9d5043708ad" category="paragraph">Le service ne provisionne pas de compartiment distinct lorsque vous utilisez le catalogue indexé v2. En revanche, pour les sauvegardes stockées sur AWS, Azure, Google Cloud Platform, StorageGRID ou ONTAP S3, le service provisionne de l'espace sur le connecteur ou dans l'environnement du fournisseur cloud.</block>
+  <block id="c2da3976b7bba43b7d1d45f7a32a43bd" category="paragraph">Si vous avez activé le catalogue indexé avant la version v2, les événements suivants se produisent dans les environnements de travail :</block>
+  <block id="5323d04b0f0228d9a4b7ec5629ddb280" category="doc">Quoi de neuf dans la sauvegarde et la récupération BlueXP</block>
 </blocks>
